--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,33 +3,22 @@
     "config:base",
     "group:allNonMajor",
     ":semanticCommits",
+    ":semanticCommitTypeAll(deps)",
+    ":semanticCommitScopeDisabled",
     ":automergeTypes",
+    ":automergeBranch",
     ":disableDependencyDashboard",
     ":pinVersions",
-    ":semanticCommitType(deps)",
     ":onlyNpm",
     ":label(dependencies)",
     "schedule:weekly"
   ],
-  "baseBranches": [
-    "main"
-  ],
   "bumpVersion": "patch",
-
+  "gitNoVerify": [
+    "commit",
+    "push"
+  ],
   "packageRules": [
-    {
-      "packageNames": [
-        "node",
-        "npm"
-      ],
-      "enabled": false
-    },
-    {
-      "depTypeList": [
-        "devDependencies"
-      ],
-      "semanticCommitType": "build"
-    },
     {
       "matchPackageNames": [
         "electron"
