--- a/.github/workflows/typechecking.yml
+++ b/.github/workflows/typechecking.yml
@@ -1,6 +1,9 @@
 name: Typechecking
-on: [workflow_call]
+on: [ workflow_call ]
 
+concurrency:
+  group: typechecking-${{ github.ref }}
+  cancel-in-progress: true
 
 defaults:
   run:
